# simple_com_server

./: .gitignore  README.md  pyproject.toml
src/simple_com_server/: __main__.py  server.py
